--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  max-width: 800px;
+}
+
+h1 {
+  text-align: center;
 }
 
 a {
