--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   max-width: 700px;
+  background-color: #f5f5f5;
 }
 
 h1 {
